--- a/extra.bib
+++ b/extra.bib
@@ -23,7 +23,7 @@
     title = {Rethinking resampling in the particle filter on graphics
         processing units},
     institution = {ArXiv},
-    type = {Mathematical e-print},
+    type = {Mathematics e-print},
     number = {1301.4019},
     year = 2013,
     pages={1--9}
@@ -34,8 +34,8 @@
     journal={Methodology and Computing in Applied Probability},
     volume={13},
     number={3},
-    title={Optimal Scaling of Random Walk Metropolis Algorithms with
-        Non-Gaussian Proposals},
+    title={Optimal scaling of random walk metropolis algorithms with
+        non-Gaussian proposals},
     publisher={Springer US},
     author={Neal, Peter and Roberts, Gareth},
     pages={583--601}
@@ -54,9 +54,9 @@
 
 @techreport{Zhou:2013vx,
     author = {{Zhou}, Y. and {Johansen}, A.~M and {Aston}, J.~A.},
-    title = "{Towards Automatic Model Comparison: An Adaptive Sequential Monte Carlo Approach}",
+    title = "{Towards automatic model comparison: an adaptive sequential Monte Carlo approach}",
     institution = {ArXiv},
-    type = {Mathematical e-print},
+    type = {Mathematics e-print},
     number = {1303.3123},
     year = 2013
 }
@@ -222,16 +222,6 @@
     publisher = {Oxford University Press}
 }
 
-@article{McCulloch:1991vx,
-    title = {A bayesian approach to testing the arbitrage pricing theory},
-    journal = {Journal of Econometrics},
-    volume = {49},
-    number = {1-2},
-    pages = {141--168},
-    year = {1991},
-    author = {Robert McCulloch and Peter E. Rossi}
-}
-
 @book{Grunwald:2005vx,
     title={Advances in Minimum Description Length: Theory and Applications},
     author={Gr{\"u}nwald, P.D. and Myung, I.J. and Pitt, M.A.},
@@ -258,7 +248,7 @@
     edition = {2}
 }
 
-@article{Fisher:1956vx,
+@book{Fisher:1956vx,
     title={Statistical Methods and Scientific Inference},
     author={Fisher, Ronald A},
     year={1956},
@@ -277,7 +267,7 @@
 
 @article{OHagan:1990vx,
     author = {O'Hagan, A.},
-    title = {Outliers and Credence for Location Parameter Inference},
+    title = {Outliers and credence for location parameter inference},
     journal = {Journal of the American Statistical Association},
     volume = {85},
     number = {409},
@@ -306,7 +296,7 @@
 
 @article{Raftery:1997vx,
     author = {Raftery, Adrian E. and Madigan, David and Hoeting, Jennifer A.},
-    title = {Bayesian Model Averaging for Linear Regression Models},
+    title = {Bayesian model averaging for linear regression models},
     journal = {Journal of the American Statistical Association},
     volume = {92},
     number = {437},
@@ -326,8 +316,8 @@
 
 @article{Allen:1974vx,
     author = {Allen, David M.},
-    title = {The Relationship Between Variable Selection and Data Agumentation
-        and a Method for Prediction},
+    title = {The relationship between variable selection and data agumentation
+        and a method for prediction},
     journal = {Technometrics},
     volume = {16},
     number = {1},
@@ -396,7 +386,7 @@
 
 @article{Shao:1993vx,
     author = {Shao, Jun},
-    title = {Linear Model Selection by Cross-validation},
+    title = {Linear model selection by cross-validation},
     journal = {Journal of the American Statistical Association},
     volume = {88},
     number = {422},
@@ -416,7 +406,7 @@
 }
 
 @article{Geisser:1975vx,
-    title = {The Predictive Sample Reuse Method with Applications},
+    title = {The predictive sample reuse method with applications},
     author = {Geisser, Seymour},
     journal = {Journal of the American Statistical Association},
     volume = {70},
@@ -426,8 +416,8 @@
 }
 
 @article{Stone:1977vx,
-    title = {An Asymptotic Equivalence of Choice of Model by Cross-Validation
-        and Akaike's Criterion},
+    title = {An asymptotic equivalence of choice of model by cross-validation
+        and Akaike's criterion},
     author = {Stone, M.},
     journal = {Journal of the Royal Statistical Society. Series B (Methodological)},
     volume = {39},
@@ -437,7 +427,7 @@
 }
 
 @article{Stone:1974vx,
-    title = {Cross-Validatory Choice and Assessment of Statistical Predictions},
+    title = {Cross-validatory choice and assessment of statistical predictions},
     author = {Stone, M.},
     journal = {Journal of the Royal Statistical Society. Series B (Methodological)},
     volume = {36},
@@ -457,7 +447,7 @@
 @article{Takeuchi:1976vx,
     title = {Distribution of informational statistics and a criterion of model
         fitting},
-    journal = {Suri-Kagaku (Mathematical Sciences)},
+    journal = {Suri-Kagaku (Mathematics Sciences)},
     issue = {153},
     pages = {12--18},
     author = {Takeuchi, K},
@@ -498,7 +488,7 @@
 
 @article{ManSuk:1992vx,
     author = {Oh, Man-Suk and Berger, James O.},
-    title = {{Adaptive importance sampling in monte carlo integration}},
+    title = {{Adaptive importance sampling in Monte Carlo integration}},
     journal = {Journal of Statistical Computation and Simulation},
     volume = {41},
     number = {3-4},
@@ -550,7 +540,7 @@
 
 @manual{matlab,
     author = {{The MathWorks, Inc}},
-    title = {{MATLAB -- The Language of Tecchnical Computing}},
+    title = {{MATLAB -- The Language of Technical Computing}},
     year = {2013},
     note = {Version~2013b},
     url = {http://www.mathworks.com/products/matlab/}
@@ -603,7 +593,7 @@
 }
 
 @article{rcoda,
-    title = {CODA: Convergence Diagnosis and Output Analysis for MCMC},
+    title = {CODA: Convergence diagnosis and output analysis for MCMC},
     author = {Martyn Plummer and Nicky Best and Kate Cowles and Karen Vines},
     journal = {R News},
     year = {2006},
@@ -683,13 +673,13 @@
     address = {New York, USA}
 }
 
-@article{presampling,
+@techreport{presampling,
     author = {Murray, L.M. and Lee, A. and Jacob, P.E.},
     title = {{Rethinking resampling in the particle filter on graphics
         processing units}},
-    journal = {ArXiv e-prints},
-    eprint = {1301.4019},
-    primaryClass = "stat.CO",
+    institution = {ArXiv},
+    type = {Mathematics e-print},
+    number = {1301.4019},
     year = 2013
 }
 
@@ -703,11 +693,9 @@
 
 @book{moderncpp,
     author = {Alexandrescu, Andrei},
-    title = {{Moder C++ Design: Generic Programming and Design Patterns
+    title = {{Modern C++ Design: Generic Programming and Design Patterns
         Applied}},
     publisher = {Addison Wesley},
-    series = {C++ In-Depth Series},
-    editor = {Stroustrup, Bjarne},
     year = 2004,
     address = {Boston, USA}
 }
@@ -896,23 +884,12 @@
     url = {http://threadingbuildingblocks.org/}
 }
 
-@article{metropolis1953,
-    author = {Nicholas Metropolis and Arianna W. Rosenbluth and Marshall N.
-        Rosenbluth and Augusta H. Teller and Edward Teller},
-    collaboration = {},
-    title = {Equation of State Calculations by Fast Computing Machines},
-    year = {1953},
-    journal = {The Journal of Chemical Physics},
-    volume = {21},
-    number = {6},
-    pages = {1087--1092},
-}
-
-@article{libbi,
+@techreport{libbi,
     author = {{Murray}, L.~M.},
     title = {{Bayesian State-Space Modelling on High-Performance Hardware
         Using LibBi}},
-    journal = {ArXiv e-prints},
-    eprint = {1306.3277},
+    institution = {ArXiv},
+    type = {Mathematics e-print},
+    number = {1306.3277},
     year = 2013
 }
