--- a/fig/gmm_resample.tex
+++ b/fig/gmm_resample.tex
@@ -6,6 +6,6 @@
   {Monte Carlo variance of standard estimator and path sampling estimator
     using different threshold of $\ess/N$ for Gaussian mixture model using the
     \smc[2] algorithm and the stratified resampling. The variances are plotted
-    on log scale}
+    on log scale.}
   \label{fig:gmm resample}
 \end{figure}
