--- a/fig_src/Adaptive_Proposal.tex
+++ b/fig_src/Adaptive_Proposal.tex
@@ -1,11 +1,9 @@
-% Created by tikzDevice version 0.6.2-92-0ad2792 on 2013-11-02 06:55:58
+% Created by tikzDevice version 0.6.2-92-0ad2792 on 2013-11-12 07:53:00
 % !TEX encoding = UTF-8 Unicode
 \documentclass[12pt, mainfont = Minion,     mainscale = 1.0, sansfont = Myriad,     sansscale = MatchLowercase, monofont = Consolas,   monoscale = MatchLowercase, mathfont = MinionMath, mathscale = 1.0]{mtikzfig}
 \begin{document}
 
-
-\end{document}
-re}[x=1pt,y=1pt]
+\begin{tikzpicture}[x=1pt,y=1pt]
 \definecolor[named]{fillColor}{rgb}{1.00,1.00,1.00}
 \path[use as bounding box,fill=fillColor,fill opacity=0.00] (0,0) rectangle (433.62,216.81);
 \begin{scope}
