--- a/thesis.tex
+++ b/thesis.tex
@@ -5,6 +5,7 @@ bib, bibintoc, biblatexstyle=numeric,
 mintcode, minted=cache,
 draftnote, showoverfull
 ]{mthesis}
+\ExecuteBibliographyOptions{url=true}
 
 \input{macros}
 
