--- a/fig/adaptive_dist.tex
+++ b/fig/adaptive_dist.tex
@@ -4,7 +4,7 @@
   \caption[Variations of the distribution specification parameter for the
   \protect\pet compartmental model using adaptive \protect\smc algorithms]
   {A typical plot of $\alpha_t - \alpha_{t-1}$ against $\alpha_t$ for the
-    two-compartments \pet model with the simulated data set using \smc[2]
+    two-compartments \pet model with the simulated data set using the \smc[2]
     algorithm. The specifications of the adaptive parameter (\ess or \cess)
     are adjusted such that all four samplers use roughly the same number of
     distributions.}
