--- a/tab/gmm-prob.tex
+++ b/tab/gmm-prob.tex
@@ -1,6 +1,6 @@
 \draftnote{There are still some overfull boxes in this
   Table~5.3, but it shall look just fine once I drop the
-  draft option of the document class and do not shall the overfull bars}
+  draft option of the document class and do not show the overfull bars}
 
 \begin{table}[t]
   \linespread{1.1}\selectfont
