--- a/tab/pet-bf.tex
+++ b/tab/pet-bf.tex
@@ -1,16 +1,9 @@
-\clearpage
 \thispagestyle{empty}
 \newgeometry{hmargin={1in,1in},vmargin={1in,2in},bindingoffset=\mclassbinding}
 \begin{table}[t]
   \linespread{1.1}\selectfont
   \caption[\protect\pet compartmental model Bayes factor estimates]
-  {Bayes factor $B_{2,1}$ estimates of two components \pet model. $T$: Number
-    of distributions in \smc and number of iterations used for inference in
-    \pmcmc. $N$: Number of particles in \smc and number chains in \pmcmc. The
-    \pmcmc and \smc with $N = 192$ are completely $N$-way parallelized.  \smc
-    with $N = 960$ are $N/5$-way parallelized. \SubBest: Minimum variance for
-    the same computational cost and the same schedule.  \Best: Minimum
-    variance for the same computational cost and all schedules.}
+  {Bayes factor $B_{2,1}$ estimates of two components \pet model.} 
   \label{tab:pet-bf}
   \begin{tabu}{X[0.4l]X[0.4l]X[0.7c]X[0.8r]X[1r]X[0.8r]X[0.8r]}
       \toprule
@@ -41,6 +34,23 @@
       $1000$ & $960$ & \smc2-\ds & $\SubBest{1.6\pm0.09}$ & $1.6\pm0.33$    & $\SubBest{1.6\pm0.08}$ & $\Best{1.6\pm0.04}$  \\
              &       & \smc2-\ps & $\SubBest{1.6\pm0.09}$ & $-0.2\pm6.63$   & $\SubBest{1.6\pm0.08}$ & $\Best{1.6\pm0.04}$  \\
       \bottomrule
+    \multicolumn{7}{r}{%
+      \begin{minipage}{\linewidth-2em}\vskip1ex\sffamily
+        $T$: The number of distributions.
+
+        $N$: The number of particles.
+
+        Proposal: The proposal scales of the \mcmc kernels.
+
+        Annealing: The annealing scheme of the distributions,
+        $\alpha_k(t/T_k)$ in Equation~\ref{eq:geometry_2}.
+
+        \Best: The estimate with the smallest variance among all algorithms
+        settings.
+
+        \SubBest: The estimate with the smallest variance for a single
+        algorithm (\smc[2] or \pmcmc) among different settings.
+      \end{minipage}}
     \end{tabu}
 \end{table}
 \restoregeometry
