proof read chap 2, 3

--- a/fig/pet_mh_h_path.tex
+++ b/fig/pet_mh_h_path.tex
@@ -1,10 +1,10 @@
 \begin{figure}
   \linespread{1.1}\selectfont
   \includegraphics[width=\linewidth]{fig_src/PET_MH_H_Path.pdf}
-  \caption[Trace of parameters in the random walk algorithm for the
+  \caption[Traces of parameters in the random walk algorithm for the
   \protect\pet compartmental model (uncalibrated)]
-  {Trace of $(\phi_1,\theta_1)$ from three random walk
-    Metropolis-Hastings samplers for a \pet model with one components and
-    non-informative prior, using proposal scales five times of those tuned}
+  {Trace of $(\phi_1,\theta_1)$ from three random walk Metropolis-Hastings
+  samplers for the one-compartments \pet model with non-informative priors,
+  using proposal scales five times of those tuned.}
   \label{fig:pet mh untuned}
 \end{figure}
