--- a/macros.tex
+++ b/macros.tex
@@ -1,5 +1,5 @@
 \UseAbbr[\iid][]{i.i.d.}
-\UseAbbr[\kld][]{Kullback-Leibler divergence}
+\UseAbbr[\kldfull][]{Kullback-Leibler divergence}
 \UseAbbr[\sd]{s.d.}
 \UseAbbr{aic}
 \UseAbbr{ais}
@@ -30,6 +30,7 @@
 \UseAbbr{ieee}
 \UseAbbr{jags}
 \UseAbbr{kl}
+\UseAbbr{kld}
 \UseAbbr{mala}
 \UseAbbr{mcmc}
 \UseAbbr{mc}
@@ -37,6 +38,7 @@
 \UseAbbr{mh}
 \UseAbbr{mle}
 \UseAbbr{mpi}
+\UseAbbr{mri}
 \UseAbbr{mse}
 \UseAbbr{nic}
 \UseAbbr{nls}
