--- a/tab/node-c.tex
+++ b/tab/node-c.tex
@@ -13,7 +13,7 @@
     &&&& \multicolumn{2}{c}{Marginal likelihood} & Bayes factor \\
     &&&& \multicolumn{2}{c}{$\log p(\data|\calM_k)\pm\sd$} & $\log B_{3,5}\pm\sd$ \\
     \cmidrule(lr){5-6}
-    $T$   & Proposal & Annealing & Algorithm   & $m = 3$                 & $m = 5$                & \\ \midrule
+    $T$   & Proposal & Annealing & Algorithm   & $r = 3$                 & $r = 5$                & \\ \midrule
     $10 $ & Manual   & Prior (5) & \pmcmc      & $-1651.0\pm27.9$        & $-85.1\pm36.6$         & $1565.9\pm42.1$ \\
     $30 $ &          &           &             & $\SubBest{-1639.7\pm7.4}$ & $\SubBest{-78.9\pm11.2}$ & $\SubBest{1560.8\pm12.8}$ \\
     $100$ &          &           &             & $-1624.6\pm15.7$        & $-75.7\pm24.8$         & $1548.9\pm25.6$ \\ \midrule
