--- a/tab/node-s.tex
+++ b/tab/node-s.tex
@@ -13,7 +13,7 @@
     &&&& \multicolumn{2}{c}{Marginal likelihood} & Bayes factor \\
     &&&& \multicolumn{2}{c}{$\log p(\data|\calM_k)\pm\sd$} & $\log B_{3,5}\pm\sd$ \\
     \cmidrule(lr){5-6}
-    $T$   & Proposal & Annealing & Algorithm   & $m = 3$                & $m = 5$                & \\ \midrule
+    $T$   & Proposal & Annealing & Algorithm   & $r = 3$                & $r = 5$                & \\ \midrule
     $10 $ & Manual         & Prior (5) & \pmcmc      & $-109.7\pm3.2$         & $-120.3\pm2.5$         & $10.6\pm3.8$ \\
     $30 $ &                &           &             & $\SubBest{-105.0\pm1.2}$ & $\SubBest{-116.1\pm2.2}$ & $\SubBest{11.2\pm2.5}$ \\
     $100$ &                &           &             & $-134.7\pm7.9$         & $-144.1\pm6.2$         & $9.4\pm11.2$ \\ \midrule
