--- a/fig/gmm_resample.tex
+++ b/fig/gmm_resample.tex
@@ -1,4 +1,4 @@
-\begin{figure}
+\begin{figure}[t]
   \linespread{1.1}\selectfont
   \includegraphics[width=\linewidth]{fig_src/GMM_Resample}
   \caption[Variance of standard standard estimator and path sampling using
