--- a/fig/pet_mh_diag.tex
+++ b/fig/pet_mh_diag.tex
@@ -1,4 +1,4 @@
-\begin{figure}
+\begin{figure}[t]
   \linespread{1.1}\selectfont
   \includegraphics[width=\linewidth]{fig_src/PET_MH_Diag}
   \caption[Trace and histogram of parameters in the random walk algorithm for
