--- a/fig/cm3.tex
+++ b/fig/cm3.tex
@@ -1,4 +1,4 @@
-\begin{figure}
+\begin{figure}[t]
   \centering
   \begin{tikzpicture}[scale=0.5]
     \draw (-10,4) -- (-10,5) -- (10,5) -- (10,-5) -- (-10,-5) -- (-10,0);
