--- a/fig/pet_mh_h_path.tex
+++ b/fig/pet_mh_h_path.tex
@@ -1,4 +1,4 @@
-\begin{figure}
+\begin{figure}[t]
   \linespread{1.1}\selectfont
   \includegraphics[width=\linewidth]{fig_src/PET_MH_H_Path.pdf}
   \caption[Traces of parameters in the random walk algorithm for the
