--- a/fig/pet_mo.tex
+++ b/fig/pet_mo.tex
@@ -1,4 +1,4 @@
-\begin{figure}
+\begin{figure}[t]
   \linespread{1.1}\selectfont
   \includegraphics[width=\linewidth]{fig_src/PET_MO}
   \caption[Model selection results for the \protect\pet compartmental model]
