--- a/fig/pet_vd.tex
+++ b/fig/pet_vd.tex
@@ -1,4 +1,4 @@
-\begin{figure}
+\begin{figure}[t]
   \linespread{1.1}\selectfont
   \includegraphics[width=\linewidth]{fig_src/PET_VD}
   \caption[Convergence diagnostics for the random walk algorithm for the
