--- a/table.tex
+++ b/table.tex
@@ -1,8 +1,7 @@
 \documentclass[
 11pt, fontset=Minion, toclevel=3, colorfullink=false,
 linespread=1.414, lines=30, oneside, onesideheader,
-mintcode, minted=cache,
-draftnote, showoverfull
+mintcode, minted=cache, showoverfull
 ]{mthesis}
 \input{macros}
 
