--- a/thesis.tex
+++ b/thesis.tex
@@ -3,7 +3,7 @@
 linespread=1.414, lines=30, oneside, onesideheader,
 bib, bibintoc, biblatexstyle=numeric,
 mintcode, minted=cache,
-draftnote, showoverfull
+showoverfull
 ]{mthesis}
 \usepackage{pdfpages}
 \ExecuteBibliographyOptions{url=true}
